# OpenGL-Rendering

./: CMakeLists.txt  README.md  vcpkg_required.txt
Assets/: CMakeLists.txt  bonfire_1.blend  bonfire_1.blend1  bonfire_scene.blend  cube_mat.gltf  double_primitives.gltf  hierarchy_test.gltf  scene_test.blend  scene_test.blend1  scene_test.gltf  scene_test_4.gltf  scene_test_depth.gltf  scene_test_skin.gltf  scene_test_skin_2.gltf  scene_test_skin_3.gltf  scene_test_skin_3.gltf.glb  scene_test_skin_3.gltf.glb.gltf  testCube.glb  testCube_colours.gltf  testCube_properties.glb  testCube_properties.gltf  testCube_properties_flip.gltf  three_elements.gltf
Renderer/: CMakeLists.txt  Camera.hpp  DrawingManager.hpp  GraphicBuffer.cpp  GraphicBuffer.hpp  IModel.hpp  Mesh.hpp  ModelImporter.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.hpp  TextureProgram.cpp  TextureProgram.hpp  Transform.cpp  Transform.hpp  VertexData.hpp
Renderer/Camera/: BasicCamera.cpp  BasicCamera.hpp  CMakeLists.txt
Renderer/Common/: CMakeLists.txt  Camera.cpp  DepthBuffer.cpp  IdGenerator.cpp  Mesh.cpp  Node.cpp  NodeLink.cpp  Scene.cpp  Skin.cpp  Texture.cpp
Renderer/Common/Common/: Camera.hpp  DepthBuffer.hpp  FramebufferBase.hpp  IdGenerator.hpp  Mesh.hpp  Node.hpp  NodeLink.hpp  Scene.hpp  Skin.hpp  Texture.hpp  VertexAttribute.hpp  VertexData.hpp
Renderer/Contour/: CMakeLists.txt  Contour.frag.glsl  Contour.vert.glsl  Mesh.hpp  Model.hpp  ModelImporter.hpp  Program.cpp  Program.hpp
Renderer/Contour/Contour/: Program.hpp
Renderer/DebugUtils/: CMakeLists.txt
Renderer/DebugUtils/TextureProgram/: CMakeLists.txt  TextureProgram.cpp  TextureProgram.hpp
Renderer/EdgeDetector/: CMakeLists.txt  Program.cpp  edgeDetector.frag.glsl
Renderer/EdgeDetector/EdgeDetector/: Program.hpp
Renderer/Importer/: CMakeLists.txt  Importer.cpp  Importer.hpp
Renderer/Lighting/: CMakeLists.txt  LightingManager.h
Renderer/Lighting/Directional/: DirectionalLight.cpp  DirectionalLightProgram.vert.glsl
Renderer/MappingProgram/: CMakeLists.txt  Impl.cpp  MappingProgram.frag copy.glsl  MappingProgram.frag.glsl  MappingProgram.vert.animated.glsl  MappingProgram.vert.glsl  Program.cpp  UniformDefinitions.hpp
Renderer/MappingProgram/MappingProgram/: Animated.hpp  Material.hpp  Program.hpp  Properties.hpp  Static.hpp
Renderer/NoIdeaHowToCallItYet/: CMakeLists.txt  DepthBuffer.cpp  DepthBuffer.hpp  DrawingManager.hpp  FramebufferBase.hpp  ShadowMapDrawer.hpp
Renderer/Node/: CMakeLists.txt  CameraNode.cpp  CameraNode.hpp  IMesh.hpp  IModel.hpp  INodeVisitor.hpp  MeshNode.cpp  MeshNode.hpp  Node.cpp  Node.hpp  SkinNode.cpp  SkinNode.hpp  SkinnedMeshNode.hpp
Renderer/Pipeline/: CMakeLists.txt  DrawingManager.hpp  GraphicBuffer.cpp  GraphicBuffer.hpp  NodeUpdater.cpp  SceneDrawingManager.cpp  ShadowMapDrawer.hpp  SkinnedMeshDrawer.cpp  SkinnedMeshQueue.cpp  StaticMeshDrawer.cpp  StaticMeshQueue.cpp  TransformProcessor.cpp
Renderer/Pipeline/Pipeline/: DrawingExecutor.hpp  NodeUpdater.hpp  SceneDrawingManager.hpp  ShadowMapDrawer.hpp  SkinnedMeshDrawer.hpp  SkinnedMeshQueue.hpp  StaticMeshDrawer.hpp  StaticMeshQueue.hpp  TransformProcessor.hpp
Renderer/Programs/: CMakeLists.txt
Renderer/Programs/Base/: CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.hpp
Renderer/Programs/DebugMeshProgram/: CMakeLists.txt  DebugMeshProgram.cpp  DebugMeshProgram.hpp  debugMesh.frag.glsl  debugMesh.vert.glsl
Renderer/Programs/EdgeProgram/: CMakeLists.txt  EdgeProgram.cpp  EdgeProgram.hpp  edgeDetector.frag.glsl
Renderer/Programs/ShaderCompiler/: CMakeLists.txt
Renderer/Programs/TextureProgram/: CMakeLists.txt  TextureProgram.cpp  TextureProgram.hpp  texture.frag.glsl  texture.vert.glsl
Renderer/Scene/: CMakeLists.txt  Camera.cpp  DepthBuffer.cpp  FramebufferBase.cpp  Mesh.cpp  Node.cpp  NodeLink.cpp  Scene.cpp  Skin.cpp  Texture.cpp
Renderer/Scene/Scene/: Camera.hpp  IdGenerator.hpp  Material.hpp  MaterialManager.hpp  Mesh.hpp  Node.hpp  NodeLink.hpp  Scene.hpp  SceneElement.hpp  SceneLight.hpp  SceneObject.hpp  SceneView.hpp  Skin.hpp  Texture.hpp  Transformed.hpp  VertexData.hpp
Renderer/Scene/src/: Camera.cpp  DirectionalLight.cpp  Mesh.cpp  Node.cpp  NodeLink.cpp  PointLight.cpp  Primitive.cpp  Scene.cpp  Skin.cpp  SpotLight.cpp  Texture.cpp
Renderer/SceneDrawing/: BasePassPipelineManager.cpp  CMakeLists.txt  GraphicBuffer.cpp  Material.frag.glsl  Material.vert.glsl  SceneDrawingManager.cpp  TransformProcessor.cpp
Renderer/SceneDrawing/SceneDrawing/: BasePassBuffer.hpp  CubeDepthBuffer.hpp  DepthBuffer.hpp  DrawingExecutor.hpp  FramebufferBase.hpp  Frustum.hpp  GlobalTexturesBuffer.hpp  GraphicBuffer.hpp  LightingPassBuffer.hpp  SceneDrawingManager.hpp  TransformProcessor.hpp
Renderer/SceneDrawing/src/: BasePassBuffer.cpp  BasePassPipelineManager.cpp  BlendPipelineManager.cpp  BlurPipelineManager.cpp  BrightnessFilterPipelineManager.cpp  CombinePassPipelineManager.cpp  ContourPassBuffer.cpp  ContourPassPipelineManager.cpp  CubeDepthBuffer.cpp  DepthBuffer.cpp  FramebufferBase.cpp  GlobalTexturesBuffer.cpp  GraphicBuffer.cpp  LightingPassBuffer.cpp  LightingPassPipelineManager.cpp  PostProcessBuffer.cpp  SceneDrawingManager.cpp  ShadowMappingPassBuffer.cpp  ShadowMappingPipelineManager.cpp  TransformProcessor.cpp
Renderer/ShaderProgram/: CMakeLists.txt  ShaderProgram.cpp  ShaderProgram.hpp
Renderer/Shadow/: CMakeLists.txt  LightNode.cpp  Program.cpp  Shadow.frag.glsl
Renderer/Shadow/Shadow/: LightNode.hpp  Program.hpp
Renderer/ShadowMapping/: Directional.vert.glsl
Renderer/ShadowMapping/Directional/: Directional.hpp
Renderer/Texture/: CMakeLists.txt  Texture.cpp  Texture.hpp
Renderer/UI/: CMakeLists.txt
Renderer/Utils/: CMakeLists.txt  always_fail.hpp  id_generator.hpp  overloaded.hpp  projection.hpp  read_file.hpp
Renderer/VertexData/: CMakeLists.txt  VertexData.hpp
Renderer/_Lighting/: LightingManager.h
Renderer/_ShadowMapping/: CMakeLists.txt  Directional.cpp  Directional.frag.glsl  Directional.vert.animated.glsl
test/: CMakeLists.txt  main.cpp
(+76 files in other folders)
