cmake_minimum_required(VERSION 3.9)

add_subdirectory(Pipeline)
# add_subdirectory(BasicMaterial)
add_subdirectory(EdgeDetector)
add_subdirectory(Common)
# add_subdirectory(Lighting) // TODO
add_subdirectory(MappingProgram)
add_subdirectory(DebugUtils)
add_subdirectory(Camera)
add_subdirectory(ShaderProgram)
add_subdirectory(Importer)